imclass-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imclass-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: imclass
  ports:
  - port: 5000
    targetPort: 100
